Add about:license and about:licence and make about: link to them.  Bug 256945, r=gerv, sr=darin